# headerParser

./: .gitignore  CMakeLists.txt  HeaderParser.sln  HeaderParser.vcxproj  README.md  addHeaderParserToShellCtxtMenu.bat  linuxBuild.sh  winBuild.bat
cmake.inc/: Libs.cmake  Main.cmake  Res.cmake  Sources.cmake  Tests.cmake
res/: headerparser.rc
src/: ArchitectureInfo.h  Globals.h  HeaderData.h  PEHeaderData.h  errorCodes.h  exp.h  headerDataHandler.h  headerParser.c  headerParserLib.c  headerParserLib.h  headerParserLibPE.h  header_parser.py  parser.h  print.h  stringPool.h  warnings.h
src/art/: ArtFileHeader.h  ArtHeaderOffsets.h  ArtHeaderParser.h  ArtHeaderPrinter.h
src/dex/: DexFileHeader.h  DexHeaderOffsets.h  DexHeaderParser.h  DexHeaderPrinter.h
src/elf/: ElfEFlags.h  ElfFileHeader.h  ElfFileType.h  ElfHeaderOffsets.h  ElfHeaderParser.h  ElfHeaderPrinter.h  ElfInstructionSetArchitecture.h  ElfOSAbiIdentification.h  ElfPhPType.h  ElfProgramHeader.h  ElfProgramHeaderFlags.h  ElfProgramHeaderTypes.h  ElfSectionHeader.h  ElfSectionHeaderFlags.h  ElfSectionHeaderTypes.h  ElfSectionParser.h
src/jar/: JarHeader.h  JarHeaderOffsets.h  JarHeaderParser.h  JarHeaderPrinter.h
src/java/: JavaClassHeaderParser.h
src/macho/: MachOCPUTypes.h  MachOFileHeader.h  MachOHeaderOffsets.h  MachOHeaderParser.h  MachOHeaderPrinter.h
src/msi/: MsiHeader.h  MsiHeaderOffsets.h  MsiHeaderParser.h  MsiHeaderPrinter.h
src/pe/: PECertificateHandler.h  PECharacteristics.h  PEHeader.c  PEHeader.h  PEHeaderOffsets.c  PEHeaderOffsets.h  PEHeaderParser.h  PEHeaderPrinter.h  PEHeaderSectionNameResolution.h  PEImageDirectoryParser.h  PEMachineTypes.h  PEOptionalHeaderSignature.h  PESectionCharacteristics.h  PESymbolTable.h  PEWindowsSubsystem.h
src/pe/idp/: PEImageBaseRelocationTable.h  PEImageBoundImportTable.h  PEImageDebugTable.h  PEImageDelayImportTable.h  PEImageExceptionTable.h  PEImageExportTable.h  PEImageImportTable.h  PEImageLoadConfigTable.h  PEImageResourceTable.h  PEImageRessourceTable.h  PEImageTLSTable.h
src/utils/: Converter.c  Converter.h  Files.h  Helper.h  blockio.h  common_fileio.h  env.h
src/utils/fifo/: Fifo.c  Fifo.h
src/zip/: ZipHeader.h  ZipHeaderOffsets.h  ZipHeaderParser.h  ZipHeaderPrinter.h
tests/: HPDirectoryRunner.cpp  HeaderParserDirectoryRunner.cpp  HeaderParserLibPETest.h  HeaderParserLibTest.h  HeaderParserTest.h  Tests.vcxproj  compare_header_parser_to_lib.py  testHeaderParserLib.c  testHeaderParserLibPE.c  test_header_parser.py  test_header_parser_main.py  unitTests.cpp
tests/files/: hello_world_release.elf
tests/jar/: JarParserTest.h
tests/misc/: DirectoryRunner.cpp  DirectoryRunner.h  FileUtil.h  RawHeaderDataParser.h  ThreadPool.cpp  ThreadPool.h
tests/misc/utils/: StringUtil.h  ThreadPool.cpp  ThreadPool.h
tests/pe/: PEParserTest.h
tests/utils/: ConverterTest.h  HelperTest.h
